[gd_scene load_steps=5 format=3 uid="uid://6tkv8ohnat6r"]

[ext_resource type="Script" uid="uid://dgnj5viotp21n" path="res://scenes/game.gd" id="1_uwrxv"]
[ext_resource type="Texture2D" uid="uid://skrt8dievfwd" path="res://icon.svg" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://bqp7oxm2tlpn1" path="res://scenes/player_hand.tscn" id="3_lbhrr"]
[ext_resource type="Script" uid="uid://b2wtax51uglhu" path="res://scripts/player_hand.gd" id="4_iywne"]

[node name="Game" type="Node2D"]
script = ExtResource("1_uwrxv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_yqjtg")

[node name="Label" type="Label" parent="."]
offset_left = -58.0
offset_top = 97.0
offset_right = 60.0
offset_bottom = 146.0
text = "HEllo worldddd
z"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PlayerHand" parent="." instance=ExtResource("3_lbhrr")]
position = Vector2(334, 96)
script = ExtResource("4_iywne")

[node name="ToggleChoose" type="Button" parent="."]
offset_left = -54.0
offset_top = 257.0
offset_right = 55.0
offset_bottom = 288.0
text = "Choose"

[node name="ChooseOkay" type="Button" parent="."]
offset_left = -54.0
offset_top = 257.0
offset_right = 55.0
offset_bottom = 288.0
text = "Okay"

[connection signal="pressed" from="ToggleChoose" to="." method="_on_toggle_choose_pressed"]
[connection signal="pressed" from="ChooseOkay" to="." method="_on_choose_okay_pressed"]
